Next Release
============

- Fixed jQuery path in dashboard template which was preventing the
  confirmation dialog for deleting a member to be shown. Made sure that
  a wrong jQuery path would not allow deletions without confirmation dialog
  in the future.

- Fixed usage of jQuery, jQuery UI and Bootstrap. Reorganized files and
  corrected all references.

- Fixed link to statistics of finished memberships.



1.10.1
======

- Removed column "BC/GV" from Application for Membership dashboard. Emails
  were sent without confirmation when clicking the button.

- Introduced version number to c3sMembership. Started with 1.10.1. The
  application has been productively used for some time (i.e. at least 1.0)
  and went through a few changes since then. Therefore, taking 1.10.0 for
  the existing version 1.10.0 seems reasonable.