@@ -121,6 +121,8 @@ def main(global_config, **settings):
                      '/make_crowdfounders_members')
     config.add_route('make_yesser_members',
                      '/make_yesser_members')
+    config.add_route('membership_listing_backend_only',
+                     '/memberships')
     config.add_route('membership_listing_backend',
                      '/memberships/{number}/{orderby}/{order}')
     config.add_route('membership_listing_alphabetical',
