@@ -27,8 +27,8 @@
                   function(member) {
                     answer = confirm("Do you want to delete member " + member.id + " \"" + member.lastname + ", " + member.firstname + "\"?");
                     if (answer) {
-                      deleteUrl = '${request.route_url('delete_entry', memberid=0)}';
-                      deleteUrl = deleteUrl.substring(0, deleteUrl.length - 1) + member.id + '?deletion_confirmed=1';
+                      deleteUrl = '${request.route_url('delete_entry', memberid='{memberid}', _query={'redirect': 'dashboard_only'})}';
+                      deleteUrl = deleteUrl.replace(encodeURIComponent('{memberid}'), member_id) + '&deletion_confirmed=1';
                       window.location.href = deleteUrl;
                     }
                   }
@@ -337,7 +337,7 @@
              class="btn btn-warning">edit</a>
         </td>
         <td><!--! delete application -->
-          <a href="${request.route_url('delete_entry', memberid=member.id)}"
+          <a href="${request.route_url('delete_entry', memberid=member.id, _query={'redirect': 'dashboard_only'})}"
              class="btn btn-danger delete-link"
              id="delete-link-${member.id}" >delete</a></td>
         <td><!--! turn application into a member -->
